링크, 이미지

--- a/03 html/00 basic .html
+++ b/03 html/00 basic .html
@@ -72,7 +72,108 @@
       <h2>link 태그</h2>
     </header>
     <section>
-      <a href="https://www.w3schools.com/html/html_links.asp" target="_blank">HTML Link</a>
+      <!-- 절대경로 -->
+      <a href="https://naver.com" target="_blank">HTML Link</a>
+      <!-- 상대경로 -->
+      <a href="./01 layout .html">layout.html</a>
+      <a href="./image/01-01-daisy-w.jpeg">daisy image</a>
+      <a href="image/01-01-daisy-w.jpeg">daisy image22</a>
+      <a href="mailto:nadahelly@naver.com">nadahelly@naver.com</a>
+      <!-- 웹 접근성 -->
+      <a href="https://www.naver.com" target="_blank" title="새창열림">네이버</a>
+      <a href="#main">main 바로가기</a>
+      <a href="./sub/sub.html#sec3">sub.html > id 값이 sec3 바로가기</a>
+      <a href="./sub/sub.html#sec2">sub.html > id 값이 sec2 바로가기</a>
+    </section>
+
+
+    <header>
+        <h2>image 태그</h2>
+    </header>
+    <section>
+      <!-- width, height 속성엔 단위 생략 -->
+        <!-- 상대 경로 -->
+        <img src="./image/01-01-daisy-w.jpeg" alt="daisy" width="200">
+        <img src="./image/01-01-daisy-w.jpeg" alt="daisy" style="width: 300px;">
+        <!-- 절대 경로 -->
+        <a href="https://www.rankingdak.com/promotion/exhibit/list?utm_source=timeboard&utm_medium=DA&utm_campaign=mainbranding&utm_content=&utm_term=6_3_A" target="_blank" title="새창열림">
+          <img src="https://ssl.pstatic.net/melona/libs/1448/1448051/4645680eadebc41da6cc_20230609170005362.jpg" alt="랭킹닭컴 근육절 딱 내일까지만 해요 HOT 프로틴 음료 팩당 1,200원부터" width="100%">
+        </a>
+
+        <!-- 반응형 이미지 -->
+        <picture>
+          <!-- width 650px 이상일 경우 -->
+          <source media="(min-width: 650px)" srcset="image\img_food.jpg">
+          <!-- width 465px 이상일 경우 -->
+          <source media="(min-width: 465px)" srcset="./image/img_car.jpg">
+          <img src="./image/img_girl.jpg" alt="뒷통수 아줌마" width="100%">
+        </picture>
+    </section>
+
+    <header>
+        <h2>table 태그</h2>
+    </header>
+    <section>
+        <table>
+            <caption>테이블 설명 : 자세한 설명</caption>
+            <colgroup>
+              <col width="40%">
+              <col span="3">
+            </colgroup>
+            <thead>
+              
+            </thead>
+        </table>
+    </section>
+
+
+
+
+
+    <section id="nav">
+        <h2>nav</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum perferendis exercitationem reprehenderit omnis rerum doloribus repudiandae dolorum quod at, fugiat natus veniam dolore ex harum quam architecto iure est.</p>
+    </section>
+    <section>
+        <h2>c1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum perferendis exercitationem reprehenderit omnis rerum doloribus repudiandae dolorum quod at, fugiat natus veniam dolore ex harum quam architecto iure est.</p>
+    </section>
+    <section>
+        <h2>c1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum perferendis exercitationem reprehenderit omnis rerum doloribus repudiandae dolorum quod at, fugiat natus veniam dolore ex harum quam architecto iure est.</p>
+    </section>
+    <section>
+        <h2>c1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum perferendis exercitationem reprehenderit omnis rerum doloribus repudiandae dolorum quod at, fugiat natus veniam dolore ex harum quam architecto iure est.</p>
+    </section>
+    <section>
+        <h2>c1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum perferendis exercitationem reprehenderit omnis rerum doloribus repudiandae dolorum quod at, fugiat natus veniam dolore ex harum quam architecto iure est.</p>
+    </section>
+    <section>
+        <h2>c1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum perferendis exercitationem reprehenderit omnis rerum doloribus repudiandae dolorum quod at, fugiat natus veniam dolore ex harum quam architecto iure est.</p>
+    </section>
+    <section>
+        <h2>c1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum perferendis exercitationem reprehenderit omnis rerum doloribus repudiandae dolorum quod at, fugiat natus veniam dolore ex harum quam architecto iure est.</p>
+    </section>
+    <section>
+        <h2>c1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum perferendis exercitationem reprehenderit omnis rerum doloribus repudiandae dolorum quod at, fugiat natus veniam dolore ex harum quam architecto iure est.</p>
+    </section>
+    <section>
+        <h2>c1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum perferendis exercitationem reprehenderit omnis rerum doloribus repudiandae dolorum quod at, fugiat natus veniam dolore ex harum quam architecto iure est.</p>
+    </section>
+    <section>
+        <h2>c1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum perferendis exercitationem reprehenderit omnis rerum doloribus repudiandae dolorum quod at, fugiat natus veniam dolore ex harum quam architecto iure est.</p>
+    </section>
+    <section id="main">
+        <h2>main</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus earum perferendis exercitationem reprehenderit omnis rerum doloribus repudiandae dolorum quod at, fugiat natus veniam dolore ex harum quam architecto iure est.</p>
+        <a href="#nav">nav 바로가기</a>
     </section>
   </div>
   <!-- 주석 태그 -->
@@ -81,4 +182,5 @@
 
 
 </body>
+<layer></layer>
 </html>
