테이블, 목록

--- a/03 html/00 basic .html
+++ b/03 html/00 basic .html
@@ -119,13 +119,15 @@
             <caption>테이블 설명 : 자세한 설명</caption>
             <!-- 열의 가로 사이즈 -->
             <colgroup>
-              <col width="40%">
-              <col span="4"> <!-- span : 열의 갯수 -->
+              <!-- span : 열의 개수 -->
+              <col>
+              <col width="25%">
+              <col span="4" width="10%">
             </colgroup>
             <!-- 테이블의 구분 -->
             <thead>
               <tr>
-                <th scope="col" rowspan="2">과목</th>
+                <th scope="col" rowspan="2" colspan="2">과목</th>
                 <th scope="col" colspan="4">1-1</th>
               </tr>
               <tr>
@@ -136,29 +138,23 @@
               </tr>
             </thead>
             <!-- 테이블의 본문 -->
-            <tbody>
+            <tbod>
               <tr>
-                <th scope="row">국어</th>
+                <th scope="row" rowspan="3">공통</th>
                 <th scope="row">국어</th>
                 <td>100</td>
                 <td>100</td>
                 <td>100</td>
                 <td>100</td>
               </tr>
-            </tbody>
-            <tbody>
               <tr>
-                <th scope="row">영어</th>
                 <th scope="row">영어</th>
                 <td>90</td>
                 <td>90</td>
                 <td>90</td>
                 <td>90</td>
               </tr>
-            </tbody>
-            <tbody>
               <tr>
-                <th scope="row">수학</th>
                 <th scope="row">수학</th>
                 <td>80</td>
                 <td>80</td>
@@ -169,7 +165,7 @@
             <!-- 테이블의 요약 -->
             <tfoot>
               <tr>
-                <th scope="row">평균점수</th>
+                <th scope="row" colspan="2">평균점수</th>
                 <td>90</td>
                 <td>90</td>
                 <td>90</td>
@@ -195,6 +191,168 @@
         background: #dad8d8;
       }
     </style>
+    <header>
+      <h2>list 태그</h2>
+    </header>
+    <section>
+      <h3>좋아하는 동물</h3>
+      <!-- 순서없는 목록 -->
+      <ul>
+        <li>강아지</li>
+        <li>너구리</li>
+        <li>고양이</li>
+      </ul>
+
+      <!-- 순서가 있는 목록 -->
+      <ol>
+        <li>강아지</li>
+        <li>너구리</li>
+        <li>고양이</li>
+      </ol>
+      <!-- nav -->
+      <h3>메인 메뉴</h3>
+      <!-- depth1 -->
+      <ul>
+        <li>
+          탑
+          <!-- depth2 -->
+          <ul>
+            <li>
+              블라우스
+              <ul>
+                <li>depth3</li>
+                <li>depth3</li>
+                <li>depth3</li>
+              </ul>
+            </li>
+            <li>티</li>
+            <li>셔츠</li>
+            <li>니트</li>
+          </ul>
+        </li>
+        <li>
+          아우터
+          <ul>
+            <li>자켓</li>
+            <li>코트</li>
+            <li>
+              가디건
+              <ul>
+                <li>depth3</li>
+                <li>depth3</li>
+                <li>depth3</li>
+              </ul>
+            </li>
+            <li>머플러</li>
+          </ul>
+        </li>
+        <li>
+          팬츠
+          <ul>
+            <li>청바지</li>
+            <li>짧은바지</li>
+            <li>긴바지</li>
+            <li>레깅스</li>
+          </ul>
+        </li>
+        <li>
+          악세사리
+          <ul>
+            <li>귀고리</li>
+            <li>목걸이</li>
+            <li>반지</li>
+            <li>팔찌</li>
+          </ul>
+        </li>
+      </ul>
+      
+      <ul>
+        <li>
+          <a href="#">depth1</a>
+          <ul>
+            <li>
+              <a href="#">depth2</a>
+              <ul>
+                <li>
+                  <a href="#">depth3</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">depth2</a>
+              <ul>
+                <li>
+                  <a href="#">depth3</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">depth1</a>
+          <ul>
+            <li>
+              <a href="#">depth2</a>
+              <ul>
+                <li>
+                  <a href="#">depth3</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">depth2</a>
+              <ul>
+                <li>
+                  <a href="#">depth3</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">depth1</a>
+          <ul>
+            <li>
+              <a href="#">depth2</a>
+              <ul>
+                <li>
+                  <a href="#">depth3</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">depth2</a>
+              <ul>
+                <li>
+                  <a href="#">depth3</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">depth1</a> 
+          <ul>
+            <li>
+              <a href="#">depth2</a>
+              <ul>
+                <li>
+                  <a href="#">depth3</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">depth2</a>
+              <ul>
+                <li>
+                  <a href="#">depth3</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </section>
 
 
 
