--- a/03 html/00 basic .html
+++ b/03 html/00 basic .html
@@ -354,6 +354,71 @@
       </ul>
     </section>
 
+    <header>
+      <h2>dl, dt, dd 태그</h2>
+    </header>
+    <section>
+      <dl>
+        <dt>이름</dt>
+        <dd>설명</dd>
+        <dt>이름</dt>
+        <dd>설명</dd>
+      </dl>
+
+      <dl>
+        <dt>이름</dt>
+        <dd>설명</dd>
+      </dl>
+      <dl>
+        <dt>이름</dt>
+        <dd>설명</dd>
+      </dl>
+    </section>
+
+    <header>
+      <h2>블록 & 인라인</h2>
+    </header>
+    <section>
+      <ul>
+        <li>
+          block
+          <div style="border: 1px solid blue;">div</div>
+          <div style="border: 1px solid blue;">div2</div>
+          <section style="border: 1px solid blue;">section</section>
+          <header style="border: 1px solid blue;">header</header>
+        </li>
+      </ul>
+    </section>
+
+    <header>
+      <h2>class</h2>
+    </header>
+    <section>
+      <div class="wrap">
+        <div class="sec sec1">1</div>
+        <div class="sec sec2">2</div>
+        <div class="sec sec3">3</div>
+      </div>
+      <style>
+        .wrap {
+          border: 3px solid #5f10f3;
+          background: #b4e0f1;
+        }
+        .sec {
+          border: 3px solid #f59134;
+        }
+        .sec1 {
+          background: #47e432;
+        }
+        .sec2 {
+          background: #f35cc1;
+        }
+        .sec3 {
+          background: #082bee;
+        }
+      </style>
+    </section>
+
 
 
 
