--- a/03 html/02-form.html
+++ b/03 html/02-form.html
@@ -11,7 +11,7 @@
       }
       input {
         display: inline-block
-        width: 200px;
+        width: 100px;
       }
     </style>
   </head>
@@ -21,8 +21,8 @@
     <form action="">
       <div class="terms_item">
         <div class="inp">
-          <input type="checkbox" name="" id="check1" />
-          <label for="check1">네이버 이용약관</label>
+          <input type="checkbox" name="" id="check1" required/>
+          <label for="check1">[필수선택]네이버 이용약관</label>
         </div>
         <div class="box">
           여러분을 환영합니다. 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해
@@ -44,7 +44,7 @@
     <form action="">
       <div>
         <label for="id">아이디</label> 
-        <input type="text" name="id" id="id" placeholder="10자 이하" maxlength="10">
+        <input type="text" name="id" id="id" placeholder="10자 이하" maxlength="10" autofocus>
       </div>
       <div>
         <label for="pw">비밀번호</label> 
@@ -54,9 +54,9 @@
         <label for="email">이메일</label>
         <input type="email" name="email" id="email"> @
         <select>
-          <option value="이메일 선택">이메일 선택</option>
+          <option value="">이메일 선택</option>
           <option value="네이버">naver.com</option>
-          <option value="지메일">gmail.net</option>
+          <option value="지메일">gmail.com</option>
           <option value="한메일">hanmail.net</option>
         </select>
       </div>
@@ -116,6 +116,7 @@
         <div>
           <label for="myfile">파일첨부</label>
           <input type="file" name="myfile" id="myfile" multiple>
+          <input type="file" name="myfile" id="myfile" multiple2>
         </div>
   
         <button id="ok">저장</button>
