--- a/04-css/05-display.html
+++ b/04-css/05-display.html
@@ -42,7 +42,7 @@
       height: 50px;
       background: #99b6eb;
       border: 1px solid #000;
-      border-radius: 10px;
+      border-radius: 10px;  /* 도형 라운드 */
       text-align: center;
       line-height: 50px;
     }
