--- a/05-WebDesign/01-just쇼핑몰/index.html
+++ b/05-WebDesign/01-just쇼핑몰/index.html
@@ -60,9 +60,21 @@
     </header>
     <main class="main">
       <div class="slide">
-        <div class="slide1">slide1</div>
-        <div class="slide2">slide2</div>
-        <div class="slide3">slide3</div>
+        <div class="slide1">
+          <a href="#">
+            <img src="/image/slide.jpg" alt="just쇼핑몰 베스트어워즈 2023년 상반기를 빛낸 BEST아이템을 한 자리에">
+          </a>
+        </div>
+        <div class="slide2">
+          <a href="#">
+            <img src="./image/slide2.jpg" alt="SNS HOT BRAND7 Just쇼핑몰에서 제안하는 HYPE의 기준">
+          </a>
+        </div>
+        <div class="slide3">
+          <a href="#">
+            <img src="./image/slide3.jpg" alt="HIP&HOT SUMMER Just쇼핑몰 악세사리">
+          </a>
+        </div>
       </div>
       <div class="contents">
         <!-- 공지사항 & 갤러리 -->
@@ -99,24 +111,26 @@
               <ul class="1st-gallery">
                 <li>
                   <a href="#">
-                    <img src="이미지경로" alt="">
-                    <p>봄 나들이 준비, 러블리 원피스</p>
+                    <img src="./image/gallery.jpg" alt="">
+                  </a>
+                  <a href="#">
+                    <p>SUMMER시즌오픈<br>23.06.19-06.28</p>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <img src="이미지경로" alt="">
+                    <img src="./image/gallery.jpg" alt="">
                   </a>
                   <a href="#">
-                    <p>봄 나들이 준비, 러블리 원피스</p>
+                    <p>SUMMER시즌오픈<br>23.06.19-06.28</p>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <img src="이미지경로" alt="">
+                    <img src="./image/gallery.jpg" alt="">
                   </a>
                   <a href="#">
-                    <p>봄 나들이 준비, 러블리 원피스</p>
+                    <p>SUMMER시즌오픈<br>23.06.19-06.28</p>
                   </a>
                 </li>
               </ul>
@@ -126,7 +140,7 @@
         <!-- 배너 -->
         <div class="bnr">
           <a href="#">
-            <img src="#" alt="">
+            <img src="./image/bnr.jpg" alt="첫 무신사니까 혜택도 특별하게 MUSINSA">
           </a>
         </div>
         <!-- 바로가기 -->
