--- a/05-WebDesign/01-just쇼핑몰/index.html
+++ b/05-WebDesign/01-just쇼핑몰/index.html
@@ -78,64 +78,45 @@
       </div>
       <div class="contents">
         <!-- 공지사항 & 갤러리 -->
-        <div class="tabs">
-          <section class="bbs">
-            <h3>공지사항</h3>
-            <div class="cont">공지사항 내용</div>
+        <div class="tabs-wrap">
+          <!-- 공지사항 탭 -->
+          <div class="tab-item on">
+            <h3 class="tit">공지사항</h3>
             <div class="cont">
-              <!-- 텍스트 리스트 -->
-              <ul class="1st-bbs">
-                <li>
-                  <a href="#">아디다스 5월 이벤트 페이백 이벤트 당첨자 공지</a>
-                </li>
-                <li>
-                  <a href="#">멤버십 서비스 대상 브랜드 변경 안내</a>
-                </li>
-                <li>
-                  <a href="#">메종키츠네 LIVE 페이백 이벤트</a>
-                </li>
-                <li>
-                  <a href="#">리플레인 LIVE 페이백 이벤트</a>
-                </li>
-                <li>
-                  <a href="#">개인정보처리방침 변경 안내</a>
-                </li>
+              <ul class="lst-bbs">
+                <li><a href="#">아디다스 5월 이벤트 페이백 이벤트 당첨자 공지</a></li>
+                <li><a href="#">멤버십 서비스 대상 브랜드 변경 안내</a></li>
+                <li><a href="#">메종키츠네 LIVE 페이백 이벤트</a></li>
+                <li><a href="#">리플레인 LIVE 페이백 이벤트</a></li>
               </ul>
             </div>
-          </section>
-          <section class="gallery">
-            <h3>갤러리</h3>
-            <div class="cont">갤러리 내용</div>
+          </div>
+          <!-- 갤러리 탭 -->
+          <div class="tab-item">
+            <h3 class="tit">갤러리</h3>
             <div class="cont">
-              <!-- 썸네일 리스트 -->
-              <ul class="1st-gallery">
+              <ul class="lst-gallery">
                 <li>
                   <a href="#">
-                    <img src="./image/gallery.jpg" alt="">
-                  </a>
-                  <a href="#">
-                    <p>SUMMER시즌오픈<br>23.06.19-06.28</p>
+                    <img src="./image/gallery.jpg" alt="SUMMER시즌오픈">
+                    <p>SUMMER시즌오픈</p>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <img src="./image/gallery.jpg" alt="">
-                  </a>
-                  <a href="#">
-                    <p>SUMMER시즌오픈<br>23.06.19-06.28</p>
+                    <img src="./image/gallery.jpg" alt="SUMMER시즌오픈">
+                    <p>SUMMER시즌오픈</p>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <img src="./image/gallery.jpg" alt="">
-                  </a>
-                  <a href="#">
-                    <p>SUMMER시즌오픈<br>23.06.19-06.28</p>
+                    <img src="./image/gallery.jpg" alt="SUMMER시즌오픈">
+                    <p>SUMMER시즌오픈</p>
                   </a>
                 </li>
               </ul>
             </div>
-          </section>
+          </div>
         </div>
         <!-- 배너 -->
         <div class="bnr">
@@ -156,15 +137,14 @@
     </main>
     <footer class="footer">
       <div class="logo-foot">
-        <a href="#">로고 풋터용</a>
+        <a href="#"><img src="./image/Just쇼핑몰.png" alt="Just쇼핑몰"></a>
       </div>
-      <div class="copyright">copyright</div>
+      <div class="copyright">copyright (c) 2022 Samsung C&T. All rights reserved.</div>
       <div class="sns">
-        <ul>
+        <ul class="lst-sns">
           <li><a href="#">facebook</a></li>
           <li><a href="#">instagram</a></li>
           <li><a href="#">youtube</a></li>
-          <li><a href="#">blog</a></li>
         </ul>
       </div>
     </footer>
