--- a/05-WebDesign/01-just쇼핑몰/index.html
+++ b/05-WebDesign/01-just쇼핑몰/index.html
@@ -149,5 +149,13 @@
       </div>
     </footer>
   </div>
+  <!-- modal -->
+  <div id="modal" class="dimmed">
+    <div class="modal-box">
+      <h3>모달창 제목</h3>
+      <p>모달창 내용</p>
+      <button>닫기</button>
+    </div>
+  </div>
 </body>
 </html>
