--- a/05-WebDesign/01-just쇼핑몰/index.html
+++ b/05-WebDesign/01-just쇼핑몰/index.html
@@ -149,13 +149,15 @@
       </div>
     </footer>
   </div>
-  <!-- modal -->
-  <div id="modal" class="dimmed">
+      <!-- modal -->
+  <!-- dimmed 모달창 잘 보이게 검정 오파시티  -->
+  <div id="modal" class="modal-dimmed">
     <div class="modal-box">
       <h3>모달창 제목</h3>
-      <p>모달창 내용</p>
-      <button>닫기</button>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt dolores quibusdam corporis explicabo doloremque enim molestias. Nam ullam reprehenderit veniam ratione ipsum animi adipisci perspiciatis rem dolorem! Beatae, eum itaque.</p>
+      <button>X</button>
     </div>
   </div>
+
 </body>
 </html>
