--- a/03 html/04-position.html
+++ b/03 html/04-position.html
@@ -11,7 +11,7 @@
       list-style: none;
       box-sizing: border-box;
       line-height: 1.5;
-      text-decoration: 
+      text-decoration: none;
       color: #333;
     }
   </style>
