--- a/05-WebDesign/01-just쇼핑몰/index.html
+++ b/05-WebDesign/01-just쇼핑몰/index.html
@@ -59,23 +59,18 @@
       </nav>
     </header>
     <main class="main">
-      <div class="slide">
-        <div class="slide1">
-          <a href="#">
-            <img src="/image/slide.jpg" alt="just쇼핑몰 베스트어워즈 2023년 상반기를 빛낸 BEST아이템을 한 자리에">
-          </a>
-        </div>
-        <div class="slide2">
-          <a href="#">
-            <img src="./image/slide2.jpg" alt="SNS HOT BRAND7 Just쇼핑몰에서 제안하는 HYPE의 기준">
-          </a>
-        </div>
-        <div class="slide3">
-          <a href="#">
-            <img src="./image/slide3.jpg" alt="HIP&HOT SUMMER Just쇼핑몰 악세사리">
-          </a>
-        </div>
+      <!-- 조부모 -->
+      <div class="slide-wrap">
+        <!-- 부모 -->
+        <ul class="lst-slide">
+          <!-- 자식 -->
+          <li><a href="#"><img src="/image/slide.jpg" alt="just쇼핑몰 베스트어워즈 2023년 상반기를 빛낸 BEST아이템을 한 자리에"></a></li>
+          <li><a href="#"><img src="./image/slide2.jpg" alt="SNS HOT BRAND7 Just쇼핑몰에서 제안하는 HYPE의 기준"></a></li>
+          <li><a href="#"><img src="./image/slide3.jpg" alt="HIP&HOT SUMMER Just쇼핑몰 악세사리"></a></li>
+        </ul>
+
       </div>
+
       <div class="contents">
         <!-- 공지사항 & 갤러리 -->
         <div class="tabs-wrap">
