--- a/04-css/05-position.html
+++ b/04-css/05-position.html
@@ -111,7 +111,30 @@
     }
     body {
       padding-top: 100px;
-      padding-bottom: 100px;
+      padding-bottom: 200px;
+    }
+  </style>
+
+  <h2>가운데 정렬</h2>
+  <div class="box4">
+    <div class="item"></div>
+  </div>
+
+  <style>
+    .box4 {
+      position: relative;
+      height: 500px;
+      background: #64e41a;
+    }
+    .box4 .item {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 200px;
+      height: 200px;
+      margin-top: -100px;
+      margin-left: -100px;
+      background: #d37df5;
     }
   </style>
 
