--- a/04-css/03-background.html
+++ b/04-css/03-background.html
@@ -18,7 +18,7 @@
 <body>
   <h1>background</h1>
 
-  <strong>background-color</strong>
+  <h2>background-color</h2>
   <div class="bg1">bg</div>
   <style>
     body {
@@ -33,7 +33,104 @@
     }
   </style>
 
- <strong>background-image</strong>
+  <h2>background-attachment</h2>
+  <div class="box2"></div>
+  <style>
+    .box2 {
+      height: 300px;
+      background-image: url("https://images.unsplash.com/photo-1688355791542-3bc6eb957fe9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=769&q=80");
+      background-attachment: fixed;
+      background-size: 100% auto;
+   }
+  </style>
+
+  <h2>background-image</h2>
+
+  <div class="box1"></div>
+
+  <style>
+  .box1 {
+    width: 700px;
+    height: 200vh;
+    border: 1px solid #000;
+    background-color: #fff;;
+    background-image: url("https://avatars.githubusercontent.com/u/10627436?v=4");
+    background-repeat: no-repeat;
+    background-position: 0 0%;
+    background-size: 200px auto;
+  }
+  </style>
+
+  <h2>background-size</h2>
+  <div class="box box3"></div>
+  <br>
+  <div class="box box4"></div>
+  <style>
+    .box {
+      width: 700px;
+      height: 300px;
+      border: 5px solid #000;
+      background-image: url("https://avatars.githubusercontent.com/u/10627436?v=4");
+      background-repeat: no-repeat;
+    }
+    .box3 {
+      /* 로고, 아이콘 : 잘리면 안되는 이미지 */
+      background-size: contain;
+    }
+    .box4 {
+      /* 배경이미지 : 박스를 꽉 채우는 이미지 */
+      background-size: cover;
+      background-position: 0 -180px;
+    }
+  </style>
+
+  <h2>sprite</h2>
+
+<div class="img-g sprite1"></div>
+<div class="img-g sprite2"></div>
+<div class="img-g sprite3"></div>
+<div class="img-g sprite4"></div>
+
+<style>
+  .img-g {
+    background-image: url("./image/sprite.png");
+    background-repeat: no-repeat;
+  }
+  .sprite1 {
+    width: 136px;
+    height: 132px;
+    background-position: 0 0;
+  }
+  .sprite2 {
+    width: 40px;
+    height: 38px;
+    background-position: -140px 0;
+  }
+  .sprite3 {
+    width: 40px;
+    height: 40px;
+    background-position: -140px -40px;
+  }
+  .sprite3:hover {
+    background-position: -140px -240px;
+  }
+  .sprite4 {
+    width: 32px;
+    height: 32px;
+    background-position: -180px 0;
+  }
+  .sprite4:hover {
+    background-position: -220px 0;
+  }
+  .sprite4:visited {
+    background-position: -260px 0;
+  }
+  .sprite4:active {
+    background-position: -300px 0;
+  }
+</style>
+
+
   
 </body>
 </html>
