--- a/04-css/06-responsive.html
+++ b/04-css/06-responsive.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive | css</title>
+    <!-- 폰트 링크 붙여넣기 -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -13,6 +15,8 @@
             text-decoration: none;
             color: #000;
             line-height: 1.5;
+            /* 기본 폰트 */
+            font-family: 'Noto Sans KR', sans-serif;
         }
     </style>
 </head>
@@ -95,6 +99,9 @@
         justify-content: space-between;
         /* align-items: center; */
         height: 100px;
+      }
+      header h1 {
+        font-family: 'Roboto', sans-serif;
       }
       .container {
         display: flex;
