--- a/04-css/05-position.html
+++ b/04-css/05-position.html
@@ -138,6 +138,32 @@
     }
   </style>
 
+<br><br><br>
+
+  <h2>가운데 정렬 | transform</h2>
+  <div class="box5">
+    <div class="item"></div>
+  </div>
+
+  <style>
+    .box5 {
+      position: relative;
+      height: 500px;
+      background: #98e4f1;
+    }
+    .box5 .item {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 20%;
+      height: 20%;
+      background: #4400ff;
+      /* 센터 정렬시 사용 */
+      transform: translate(-50%, -50%);
+    }
+  </style>
+
+
 
 </body>
 </html>
