--- a/04-css/08-etc.html
+++ b/04-css/08-etc.html
@@ -4,41 +4,149 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>etc | css</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      text-decoration: none;
+      box-sizing: border-box;
+      line-height: 1.5;
+      color: #000;
+    }
+  </style>
 </head>
 <body>
   <h1>tooltip</h1>
 
   <div class="tooltip-wrap">
-    tooltip 보기
-    <div class="tooltip-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, ea.</div>
+    tooltip 보기 00000 <br>tooltip 보기 00000
+    <div class="item top">top</div>
+    <div class="item bottom">bottom</div>
+    <div class="item left">left</div>
+    <div class="item right">right</div>
   </div>
 
   <style>
+    /* arrow */
+    .item::after {
+      content: '';
+      position: absolute;
+      border-width: 5px;
+      border-style: solid;
+      border-color: #8400ff transparent transparent transparent;
+    }
+    .right {
+      position: absolute;
+      top: 50%;
+      right: -60px;
+      transform: translateY(-50%);
+    }
+    .right::after {  
+      bottom: 50%;
+      left: -9px;
+      transform: rotate(90deg) translateX(50%);
+    }
+    .left {
+      position: absolute;
+      top: 50%;
+      left: -60px;
+      transform: translateY(-50%);
+      /* margin-top: -12px; 써도됨 */
+    }
+    .left::after {
+      top: 50%;
+      right: -9px;
+      transform: rotate(-90deg) translateX(50%);
+    }
+    .bottom {
+      position: absolute;
+      bottom: -35px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    .bottom::after {
+      top: -9px;
+      left: 50%;
+      transform: rotate(180deg) translateX(50%);
+    }
+    .top {
+      position: absolute;
+      top: -35px;
+      left: 50%;
+      margin-left: -25px;
+      /* margin-left 혹은 transform 둘 중 사용 */
+    }
+    .top::after {
+      bottom: -9px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
     .tooltip-wrap {
-      position: relative;
       display: inline-block;
+      position: relative;
       margin: 100px;
       font-weight: bold;
       font-size: 20px;
-      color: rgb(162, 0, 255);
+      color: rgb(255, 56, 99);
       background: #56e662;
     }
-    .tooltip-item {
-      position: absolute;
-      bottom: -230px;
-      left: 50%;
+    .item {
       /* 글씨만큼 잘라줌 */
       display: inline-block;
-      max-width: 200px;
-      padding: 5px 10px;
+      width: 50px;
+      padding: 5px;
+      font-size: 12px;
       font-weight: normal;
       color: aquamarine;
-      background: #fac9c9;
-      border-radius: 10px;
-      transform: translateX(-50%);
+      background: #8400ff;
+      border-radius: 5px;
+      opacity: 0.5;
+      text-align: center;
+      box-sizing: border-box;
+      /* transform: translateX(-50%); */
       /* word-break: break-all; */
     }
+
   </style>
   
+<br><br><br>
+
+  <h2>image style</h2>
+
+  <div class="image1">
+    <img src="https://plus.unsplash.com/premium_photo-1676654936442-17075bec36cf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="">
+  </div>
+  <style>
+    .image1 img {
+      width: 500px;
+      height: 300px;
+      object-fit: cover;
+      object-position: 50% 67%;
+      max-width: 100%;
+      padding: 5px;
+      border-radius: 10px;
+      border: 3px solid #000;
+      filter: grayscale(50%);
+    }
+  </style>
+
+<br><br><br>
+
+  <h2>mask</h2>
+  <div class="image2"></div>
+
+  <style>
+    .image2 {
+      width: 500px;
+      height: 300px;
+      -webkit-mask-image: url(./image/w3logo.png);
+      mask-image: url(./image/w3logo.png);
+      -webkit-mask-repeat: no-repeat;
+      mask-repeat: no-repeat;
+      background: url(https://plus.unsplash.com/premium_photo-1687977548364-32f1da504044?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80) no-repeat 0 -30px/*  / cover */;
+      background-size: cover;
+    }
+  </style>
 </body>
 </html>
